fix overflow

--- a/stylesheets/screen.scss
+++ b/stylesheets/screen.scss
@@ -1447,16 +1447,28 @@ body.bp p.charge {
 //}
 
 // right orientation
-a#forkme img {
+a#forkme {
   position: absolute;
   top: 54px;
-  right: -8px;
+  right: 0;
+  z-index: 999;
   height: 130px;
   width: 140px;
-  z-index: 999;
+  overflow: hidden;
+  img {
+    position: relative;
+    top: 0;
+    right: -8px;
+    height: 130px;
+    width: 140px;
+  }
 }
 
-body.home a#forkme img {
-  height: 165px;
+body.home a#forkme {
   width: 178px;
+  height: 165px;
+  img {
+    height: 165px;
+    width: 178px;
+  }
 }
